# DjangoCRMProject002

./: README.md  manage.py  pyproject.toml
DjangoCRMProject002/: asgi.py  settings.py  urls.py  wsgi.py
integration_tests/: test.py
leads/: models.py
leads/migrations/: 0001_initial.py
